[tool.poetry]
name = "Cloe"
version = "0.1.0"
description = "Manga OCR snipping tool"
authors = ["Alarcon Ace Belen"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pyqt5 = "^5.15.7"
pillow = "^9.3.0"
manga-ocr = "^0.1.8"
pynput = "^1.7.6"
huggingface-hub = "0.7.0"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.7.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
